add test image + language modifications

--- a/testPage.html
+++ b/testPage.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta charset="UTF-8">
     <title>Food Item</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
     <div class="container">
-        <img id="foodImage" src="food.jpg" alt="Food Item">
-        <button id="likeButton">Like</button>
-        <button id="dislikeButton">Dislike</button>
+        <img id="foodImage" src="pizza.jpg" alt="pizza">
+        <div id="buttons">
+            <button id="likeButton">Like</button>
+            <button id="dislikeButton">Dislike</button>
+        </div>
         <table id="foodInfo">
         </table>
     </div>
     <script src="script.js"></script>
 </body>
 </html>
-
