Changed name of right div class

--- a/mainmenu/mainmenu.html
+++ b/mainmenu/mainmenu.html
@@ -19,13 +19,13 @@
                 <div class="dayOfWeek">Mo</div>
             </div>
             <button id="weekOverview">Wochenübersicht</button>
-            <div class="firstLeft">
+            <div class="completeRight">
                 <select id="sorting">
                     <option value="popularity">Beliebtheit</option>
                     <option value="price">Preis</option>
                 </select>
             </div>
-            <div class="secondLeft">
+            <div>
                 <select id="language">
                     <option value="german">German</option>
                     <option value="english">English</option>
