Added two menus and dishes

--- a/mainmenu/mainmenu.html
+++ b/mainmenu/mainmenu.html
@@ -9,14 +9,14 @@
     <div class="container">
         <div class="head">
             <div class="week">
-                <div class="dayOfWeek">Mo</div>
-                <div class="dayOfWeek">Di</div>
-                <div class="dayOfWeek">Mi</div>
-                <div class="dayOfWeek">Do</div>
-                <div class="dayOfWeek">Fr</div>
-                <div class="dayOfWeek">Sa</div>
+                <button>Mo</button>
+                <button>Di</button>
+                <button>Mi</button>
+                <button>Do</button>
+                <button>Fr</button>
+                <button>Sa</button>
                 <div class="nextWeek"></div>
-                <div class="dayOfWeek">Mo</div>
+                <button>Mo</button>
             </div>
             <button id="weekOverview">Wochenübersicht</button>
             <div class="completeRight">
@@ -31,6 +31,106 @@
                     <option value="english">English</option>
                     <option value="only-pictures">Only pictures</option>
                 </select>
+            </div>
+        </div>
+        <div class="menu">
+            <div class="menu-title">Vorschläge für dich</div>
+            <div class="dishes">
+                <div class="dish">
+                    <div class="dish-head">
+                        <img src="../images/pizza.jpg" alt="salami-pizza">
+                        <div class="price">5,50€</div>
+                    </div>
+                    <div class="dish-name">
+                        Pizza Salami mit Tomatensoße und frischen Mozzarella
+                    </div>
+                </div>
+                <div class="dish">
+                    <div class="dish-head">
+                        <img src="../images/pizza.jpg" alt="salami-pizza">
+                        <div class="price">5,50€</div>
+                    </div>
+                    <div class="dish-name">
+                        Pizza Salami mit Tomatensoße und frischen Mozzarella
+                    </div>
+                </div>
+                <div class="dish">
+                    <div class="dish-head">
+                        <img src="../images/pizza.jpg" alt="salami-pizza">
+                        <div class="price">5,50€</div>
+                    </div>
+                    <div class="dish-name">
+                        Pizza Salami mit Tomatensoße und frischen Mozzarella
+                    </div>
+                </div>
+                <div class="dish">
+                    <div class="dish-head">
+                        <img src="../images/pizza.jpg" alt="salami-pizza">
+                        <div class="price">5,50€</div>
+                    </div>
+                    <div class="dish-name">
+                        Pizza Salami mit Tomatensoße und frischen Mozzarella
+                    </div>
+                </div>
+                <div class="dish">
+                    <div class="dish-head">
+                        <img src="../images/pizza.jpg" alt="salami-pizza">
+                        <div class="price">5,50€</div>
+                    </div>
+                    <div class="dish-name">
+                        Pizza Salami mit Tomatensoße und frischen Mozzarella
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="menu">
+            <div class="menu-title">Weitere Gerichte</div>
+            <div class="dishes">
+                <div class="dish">
+                    <div class="dish-head">
+                        <img src="../images/pizza.jpg" alt="salami-pizza">
+                        <div class="price">5,50€</div>
+                    </div>
+                    <div class="dish-name">
+                        Pizza Salami mit Tomatensoße und frischen Mozzarella
+                    </div>
+                </div>
+                <div class="dish">
+                    <div class="dish-head">
+                        <img src="../images/pizza.jpg" alt="salami-pizza">
+                        <div class="price">5,50€</div>
+                    </div>
+                    <div class="dish-name">
+                        Pizza Salami mit Tomatensoße und frischen Mozzarella
+                    </div>
+                </div>
+                <div class="dish">
+                    <div class="dish-head">
+                        <img src="../images/pizza.jpg" alt="salami-pizza">
+                        <div class="price">5,50€</div>
+                    </div>
+                    <div class="dish-name">
+                        Pizza Salami mit Tomatensoße und frischen Mozzarella
+                    </div>
+                </div>
+                <div class="dish">
+                    <div class="dish-head">
+                        <img src="../images/pizza.jpg" alt="salami-pizza">
+                        <div class="price">5,50€</div>
+                    </div>
+                    <div class="dish-name">
+                        Pizza Salami mit Tomatensoße und frischen Mozzarella
+                    </div>
+                </div>
+                <div class="dish">
+                    <div class="dish-head">
+                        <img src="../images/pizza.jpg" alt="salami-pizza">
+                        <div class="price">5,50€</div>
+                    </div>
+                    <div class="dish-name">
+                        Pizza Salami mit Tomatensoße und frischen Mozzarella
+                    </div>
+                </div>
             </div>
         </div>
     </div>
