Added a filter button

--- a/mainmenu/mainmenu.html
+++ b/mainmenu/mainmenu.html
@@ -133,6 +133,7 @@
                 </div>
             </div>
         </div>
+        <div class="filter">Filter</div>
     </div>
 </body>
 </html>
