Added data.js as module and created a database for the meals

--- a/mainmenu/mainmenu.html
+++ b/mainmenu/mainmenu.html
@@ -6,6 +6,8 @@
     <title>Mainmenu</title>
 </head>
 <body>
+    <script type="module" src="data.js"></script>
+    <script type="module" src="mainmenu.js"></script>
     <div class="container">
         <div class="head">
             <div class="week">
@@ -35,102 +37,14 @@
         </div>
         <div class="menu">
             <div class="menu-title">Vorschläge für dich</div>
-            <div class="dishes">
-                <div class="dish">
-                    <div class="dish-head">
-                        <img src="../images/pizza.jpg" alt="salami-pizza">
-                        <div class="price">5,50€</div>
-                    </div>
-                    <div class="dish-name">
-                        Pizza Salami mit Tomatensoße und frischen Mozzarella
-                    </div>
-                </div>
-                <div class="dish">
-                    <div class="dish-head">
-                        <img src="../images/pizza.jpg" alt="salami-pizza">
-                        <div class="price">5,50€</div>
-                    </div>
-                    <div class="dish-name">
-                        Pizza Salami mit Tomatensoße und frischen Mozzarella
-                    </div>
-                </div>
-                <div class="dish">
-                    <div class="dish-head">
-                        <img src="../images/pizza.jpg" alt="salami-pizza">
-                        <div class="price">5,50€</div>
-                    </div>
-                    <div class="dish-name">
-                        Pizza Salami mit Tomatensoße und frischen Mozzarella
-                    </div>
-                </div>
-                <div class="dish">
-                    <div class="dish-head">
-                        <img src="../images/pizza.jpg" alt="salami-pizza">
-                        <div class="price">5,50€</div>
-                    </div>
-                    <div class="dish-name">
-                        Pizza Salami mit Tomatensoße und frischen Mozzarella
-                    </div>
-                </div>
-                <div class="dish">
-                    <div class="dish-head">
-                        <img src="../images/pizza.jpg" alt="salami-pizza">
-                        <div class="price">5,50€</div>
-                    </div>
-                    <div class="dish-name">
-                        Pizza Salami mit Tomatensoße und frischen Mozzarella
-                    </div>
-                </div>
+            <div class="dishes" id="preferredMeals">
+
             </div>
         </div>
         <div class="menu">
             <div class="menu-title">Weitere Gerichte</div>
-            <div class="dishes">
-                <div class="dish">
-                    <div class="dish-head">
-                        <img src="../images/pizza.jpg" alt="salami-pizza">
-                        <div class="price">5,50€</div>
-                    </div>
-                    <div class="dish-name">
-                        Pizza Salami mit Tomatensoße und frischen Mozzarella
-                    </div>
-                </div>
-                <div class="dish">
-                    <div class="dish-head">
-                        <img src="../images/pizza.jpg" alt="salami-pizza">
-                        <div class="price">5,50€</div>
-                    </div>
-                    <div class="dish-name">
-                        Pizza Salami mit Tomatensoße und frischen Mozzarella
-                    </div>
-                </div>
-                <div class="dish">
-                    <div class="dish-head">
-                        <img src="../images/pizza.jpg" alt="salami-pizza">
-                        <div class="price">5,50€</div>
-                    </div>
-                    <div class="dish-name">
-                        Pizza Salami mit Tomatensoße und frischen Mozzarella
-                    </div>
-                </div>
-                <div class="dish">
-                    <div class="dish-head">
-                        <img src="../images/pizza.jpg" alt="salami-pizza">
-                        <div class="price">5,50€</div>
-                    </div>
-                    <div class="dish-name">
-                        Pizza Salami mit Tomatensoße und frischen Mozzarella
-                    </div>
-                </div>
-                <div class="dish">
-                    <div class="dish-head">
-                        <img src="../images/pizza.jpg" alt="salami-pizza">
-                        <div class="price">5,50€</div>
-                    </div>
-                    <div class="dish-name">
-                        Pizza Salami mit Tomatensoße und frischen Mozzarella
-                    </div>
-                </div>
+            <div class="dishes" id="otherMeals">
+
             </div>
         </div>
         <div class="filter">Filter</div>
