--- a/mainmenu/mainmenu.html
+++ b/mainmenu/mainmenu.html
@@ -11,14 +11,14 @@
     <div class="container">
         <div class="head">
             <div class="week">
-                <button>Mo</button>
-                <button>Di</button>
-                <button>Mi</button>
-                <button>Do</button>
-                <button>Fr</button>
-                <button>Sa</button>
+                <button id="btn_monday">Mo</button>
+                <button id="btn_tuesday">Di</button>
+                <button id="btn_wednesday">Mi</button>
+                <button id="btn_thursday">Do</button>
+                <button id="btn_friday">Fr</button>
+                <button id="btn_saturday">Sa</button>
                 <div class="nextWeek"></div>
-                <button>Mo</button>
+                <button id="btn_mondayNextWeek">Mo</button>
             </div>
             <button id="weekOverview">Wochenübersicht</button>
             <div class="completeRight">
