Added language change

--- a/mainmenu/mainmenu.html
+++ b/mainmenu/mainmenu.html
@@ -23,8 +23,8 @@
             <button id="weekOverview">Wochenübersicht</button>
             <div class="completeRight">
                 <select id="sorting">
-                    <option value="popularity">Beliebtheit</option>
-                    <option value="price">Preis</option>
+                    <option id="option_popularity" value="popularity">Beliebtheit</option>
+                    <option id="option_price" value="price">Preis</option>
                 </select>
             </div>
             <div>
@@ -36,13 +36,13 @@
             </div>
         </div>
         <div class="menu">
-            <div class="menu-title">Vorschläge für dich</div>
+            <div class="menu-title" id="title_preferredMeals">Vorschläge für dich</div>
             <div class="dishes" id="preferredMeals">
 
             </div>
         </div>
         <div class="menu">
-            <div class="menu-title">Weitere Gerichte</div>
+            <div class="menu-title" id="title_otherMeals">Weitere Gerichte</div>
             <div class="dishes" id="otherMeals">
 
             </div>
