Added sort function and changed growing behavior of dishes. Also made the header fixed on the top of the page

--- a/mainmenu/mainmenu.html
+++ b/mainmenu/mainmenu.html
@@ -35,19 +35,21 @@
                 </select>
             </div>
         </div>
-        <div class="menu">
-            <div class="menu-title" id="title_preferredMeals">Vorschläge für dich</div>
-            <div class="dishes" id="preferredMeals">
+        <div class="content">
+            <div class="menu">
+                <div class="menu-title" id="title_preferredMeals">Vorschläge für dich</div>
+                <div class="dishes" id="preferredMeals">
 
+                </div>
             </div>
-        </div>
-        <div class="menu">
-            <div class="menu-title" id="title_otherMeals">Weitere Gerichte</div>
-            <div class="dishes" id="otherMeals">
+            <div class="menu">
+                <div class="menu-title" id="title_otherMeals">Weitere Gerichte</div>
+                <div class="dishes" id="otherMeals">
 
+                </div>
             </div>
+            <div class="filter">Filter</div>
         </div>
-        <div class="filter">Filter</div>
     </div>
 </body>
 </html>
