--- a/dishView.html
+++ b/dishView.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Food Item</title>
-    <link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="stylesheet" type="text/css" href="dishView.css">
 </head>
 <body>
     <div class="container">
-        <img id="foodImage" src="pizza.jpg" alt="pizza">
+        <img id="foodImage" src="images/pizza.jpg" alt="pizza">
         <div id="buttons">
             <button id="likeButton">Like</button>
             <button id="dislikeButton">Dislike</button>
@@ -15,6 +15,6 @@
         <table id="foodInfo">
         </table>
     </div>
-    <script src="script.js"></script>
+    <script src="dishViewScript.js"></script>
 </body>
 </html>
