--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
     <script type="module" src="data.js"></script>
     <script type="module" src="script.js"></script>
+    <script type="module" src="wozListener.js"></script>
     <div id="popup">
         <!-- Schließen-Schaltfläche -->
         <div class="head" id="headPopup">
