added dynamic image in dishview

--- a/dishView/dishView.html
+++ b/dishView/dishView.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div class="container">
-        <img id="foodImage" src="../images/pizza.jpg" alt="pizza">
+        <img id="foodImage" alt="image dish">
         <div id="buttons">
             <button id="likeButton">Like</button>
             <button id="dislikeButton">Dislike</button>
