--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
                     </div>
                 </div>
-                <div class="filter">Filter</div>
+                <div class="filter" id="filter">Filter</div>
             </div>
         </div>
         <div class="separator"></div>
