--- a/dishView/dishView.html
+++ b/dishView/dishView.html
@@ -9,8 +9,8 @@
     <div class="container">
         <img id="foodImage" alt="image dish">
         <div id="buttons">
-            <button id="likeButton">Like</button>
-            <button id="dislikeButton">Dislike</button>
+            <button id="likeButton"></button>
+            <button id="dislikeButton"></button>
         </div>
         <table id="foodInfo">
         </table>
