Implemented week overview into mainmenu

--- a/weekView/weekView.html
+++ b/weekView/weekView.html
@@ -8,14 +8,9 @@
 <body>
     <script type="module" src="data.js"></script>
     <script type="module" src="weekViewScript.js"></script>
-    <div class="language-switch">
-        <select id="language">
-            <option value="german">German</option>
-            <option value="english">English</option>
-        </select>
-    </div>
-    <table id="weekly-menu">
-        <thead>
+    <div class="container">
+        <table id="weekly-menu">
+            <thead>
             <tr>
                 <th id="label-Monday">Montag</th>
                 <th id="label-Tuesday">Dienstag</th>
@@ -23,9 +18,10 @@
                 <th id="label-Thursday">Donnerstag</th>
                 <th id="label-Friday">Freitag</th>
             </tr>
-        </thead>
-        <tbody>
-        </tbody>
-    </table>
+            </thead>
+            <tbody>
+            </tbody>
+        </table>
+    </div>
 </body>
 </html>
