Added simple active filters element at the bottom of the mainmenu

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
                 <button id="btn_mondayNextWeek">Mo</button>
             </div>
             <button id="weekOverview">Wochenübersicht</button>
+
             <div class="completeRight" id="mainOptions">
                 <div class="time" id="timer">60 Sekunden verbleibend</div>
                 <select id="sorting">
@@ -61,7 +62,14 @@
 
                     </div>
                 </div>
-                <div class="filter" id="filter">Filter</div>
+                <div class="completeRight" style="margin-top: 10px">
+                    <div class="activeFilters">
+                        <span class="text">Active Filters:</span>
+                        <img class="strikethrough" src="./icons/meat.png" alt="">
+                    </div>
+                    <div class="filter" id="filter">Filter</div>
+                </div>
+
             </div>
         </div>
         <div class="separator"></div>
