Active filters in mainmenu now updates to the corresponding filters

--- a/filterView/filter.html
+++ b/filterView/filter.html
@@ -9,15 +9,15 @@
 <body>
 <div class="filter-container">
     <div class="filter-line">
-        <button class="filter-btn large with-icon" id="meat">
+        <button class="filter-btn with-icon" id="meat">
             <img src="../icons/meat.png" alt="">
             <span class="text-content">Fleisch</span>
         </button>
-        <button class="filter-btn large with-icon" id="vegetarian">
+        <button class="filter-btn with-icon" id="vegetarian">
             <img src="../icons/vegetarian.png" alt="">
             <span class="text-content">Vegetarisch</span>
         </button>
-        <button class="filter-btn large with-icon" id="vegan">
+        <button class="filter-btn with-icon" id="vegan">
             <img src="../icons/vegan.png" alt="">
             <span class="text-content">Vegan</span>
         </button>
