--- a/index.html
+++ b/index.html
@@ -65,7 +65,9 @@
                 <div class="completeRight" style="margin-top: 10px">
                     <div class="activeFilters">
                         <span class="text">Active Filters:</span>
-                        <img class="strikethrough" src="./icons/meat.png" alt="">
+                        <div class="filter-icons" id="filters">
+
+                        </div>
                     </div>
                     <div class="filter" id="filter">Filter</div>
                 </div>
