Updated language definition to match consistency and standards

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     <option id="option_price" value="price">Preis</option>
                 </select>
                 <select id="language">
-                    <option value="german">German</option>
+                    <option value="german">Deutsch</option>
                     <option value="english">English</option>
                     <option value="only-pictures">Only pictures</option>
                 </select>
