--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
                         </div>
                     </div>
                     <div class="filter" id="filter">Filter</div>
+                    <div class="tutorial" id="tutorial">Tutorial</div>
                 </div>
 
             </div>
